--- a/index.html
+++ b/index.html
@@ -202,10 +202,15 @@
     </div>
     <div class="d-grid col-10 mx-auto mt-5">
         <button class="btn btn-primary" type="button" onclick="calc()">Calcular</button>
+        
     </div>
 
 
-    <div class="output" id="output"></div>
+ 
+
+    <div id="output">
+       
+    </div>
 
     </div>
    
