--- a/index.html
+++ b/index.html
@@ -44,38 +44,39 @@
     </nav>
     <div class="container mt-5 text-center">
         <h2 class="mb-1">Menu - Faça A Sua Escolha</h2>
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+        <div class="container mt-1 d-none d-lg-block">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img1.jpg" class="d-block w-100" alt="img1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img2.jpg" class="d-block w-100" alt="img2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img3.jpg" class="d-block w-100" alt="img3">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img1.jpg" class="d-block w-100" alt="img1">
-                </div>
-                <div class="carousel-item">
-                    <img src="img2.jpg" class="d-block w-100" alt="img2">
-                </div>
-                <div class="carousel-item">
-                    <img src="img3.jpg" class="d-block w-100" alt="img3">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-
         <div class="container shadow-lg rounded mt-5 mb-5">
             <div class="row justify-content-center gap-5 p-5 text-center">
                 <h3>Prato Principal</h3>
@@ -95,7 +96,7 @@
                 </div>
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="coxa.jpg" class="card-img-top" alt="bife">
+                    <img src="coxa.jpg" class="card-img-top" alt="Coxa">
                     <div class="card-body">
                         <h4 class="card-title">Coxa de Frango Crocante</h4>
                         <h3 class="card-title text-success">R$ 25,00</h3>
@@ -110,7 +111,7 @@
 
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="panela.jpg" class="card-img-top" alt="bife">
+                    <img src="panela.jpg" class="card-img-top" alt="Carne de panela">
                     <div class="card-body">
                         <h3 class="card-title">Carne de Pamela</h4>
                             <h4 class="card-title text-success">R$ 22,00
@@ -130,7 +131,7 @@
                 <h3>Acompanhamentos</h3>
                 <h4>Porções para uma pessoa</h4>
                 <div class="card shadow-lg p-2 rounded " style="width: 18rem;">
-                    <img src="bife.jpg" class="card-img-top" alt="bife">
+                    <img src="farofa.jpg" class="card-img-top" alt="Farofa">
                     <div class="card-body">
                         <h4 class="card-title">Farofa</h4>
                         <h3 class="card-title text-success">R$ 10,00</h3>
@@ -144,7 +145,7 @@
                 </div>
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="coxa.jpg" class="card-img-top" alt="bife">
+                    <img src="salad.jpg" class="card-img-top" alt="Salada">
                     <div class="card-body">
                         <h4 class="card-title">Salada</h4>
                         <h3 class="card-title text-success">R$ 8,00</h3>
@@ -159,7 +160,7 @@
 
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="panela.jpg" class="card-img-top" alt="bife">
+                    <img src="torresmo.jpg" class="card-img-top" alt="Torresmo">
                     <div class="card-body">
                         <h3 class="card-title">Torresmo</h4>
                             <h4 class="card-title text-success">R$ 8,00
@@ -177,43 +178,43 @@
 
 
         </div>
+        <div class="container shadow-lg mt-5 rounded p-5 d-grid col-12 text-center">
+            <h3>Dados pessoais</h3>
+            <form class="row g-3 text-start">
+                <div class="col-12 col-md-8  offset-md-2">
+                    <label for="inputNome" class="form-label">Nome</label>
+                    <input id="nome" type="text" class="form-control" id="inputNome" placeholder="Nome:">
+                </div>
 
+                <div class="col-12 col-md-8 offset-md-2">
+                    <label for="inputEmail" class="form-label">Email</label>
+                    <input id="email" type="email" class="form-control" id="inputEmail" placeholder="Email:">
+                </div>
+
+                <div class="col-12 col-md-8  offset-md-2">
+                    <label for="inputTelefone" class="form-label">Telefone</label>
+                    <input id="telefone" type="text" class="form-control" id="inputTelefone" placeholder="Telefone:">
+                </div>
+
+            </form>
+
+        </div>
     </div>
-    <div class="container shadow-lg mt-5 rounded p-5 d-grid col-12 text-center">
-        <h3>Dados pessoais</h3>
-        <form class="row g-3 text-start">
-            <div class="col-12 col-md-8  offset-md-2">
-                <label for="inputNome" class="form-label">Nome</label>
-                <input id="nome" type="text" class="form-control" id="inputNome" placeholder="Nome:">
-            </div>
 
-            <div class="col-12 col-md-8 offset-md-2">
-                <label for="inputEmail" class="form-label">Email</label>
-                <input id="email" type="email" class="form-control" id="inputEmail" placeholder="Email:">
-            </div>
-
-            <div class="col-12 col-md-8  offset-md-2">
-                <label for="inputTelefone" class="form-label">Telefone</label>
-                <input id="telefone" type="text" class="form-control" id="inputTelefone" placeholder="Telefone:">
-            </div>
-
-        </form>
-
-    </div>
     <div class="d-grid col-10 mx-auto mt-5">
         <button class="btn btn-primary" type="button" onclick="calc()">Calcular</button>
-        
+
     </div>
 
 
- 
+
 
     <div id="output">
-       
+
     </div>
 
     </div>
-   
+
     <script src="js/jquery-3.6.0.min.js"> </script>
 
     <script src="js/jquery.mask.min.js"> </script>
@@ -222,7 +223,9 @@
     <script>
         $("#phone").mask("(99) 9999-99999");
     </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
