--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
     <div class="container mt-5 text-center">
-        <h2 class="mb-1">Menu - Faça A Sua Escolha</h2>
+        <h2 class="mb-3">Menu - Faça A Sua Escolha</h2>
         <div class="container mt-1 d-none d-lg-block">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
@@ -56,13 +56,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img1.jpg" class="d-block w-100" alt="img1">
+                        <img src="images/img1.jpg" class="d-block w-100" alt="img1">
                     </div>
                     <div class="carousel-item">
-                        <img src="img2.jpg" class="d-block w-100" alt="img2">
+                        <img src="images/img2.jpg" class="d-block w-100" alt="img2">
                     </div>
                     <div class="carousel-item">
-                        <img src="img3.jpg" class="d-block w-100" alt="img3">
+                        <img src="images/img3.jpg" class="d-block w-100" alt="img3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -82,7 +82,7 @@
                 <h3>Prato Principal</h3>
                 <h4>Todos os pratos acompanham arroz, feijão e a sobremesa do dia.</h4>
                 <div class="card shadow-lg p-2 rounded " style="width: 18rem;">
-                    <img src="bife.jpg" class="card-img-top" alt="bife">
+                    <img src="images/bife.jpg" class="card-img-top" alt="bife">
                     <div class="card-body">
                         <h4 class="card-title">Bife com batata</h4>
                         <h3 class="card-title text-success">R$ 30,00</h3>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="coxa.jpg" class="card-img-top" alt="Coxa">
+                    <img src="images/coxa.jpg" class="card-img-top" alt="Coxa">
                     <div class="card-body">
                         <h4 class="card-title">Coxa de Frango Crocante</h4>
                         <h3 class="card-title text-success">R$ 25,00</h3>
@@ -111,7 +111,7 @@
 
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="panela.jpg" class="card-img-top" alt="Carne de panela">
+                    <img src="images/panela.jpg" class="card-img-top" alt="Carne de panela">
                     <div class="card-body">
                         <h3 class="card-title">Carne de Pamela</h4>
                             <h4 class="card-title text-success">R$ 22,00
@@ -131,7 +131,7 @@
                 <h3>Acompanhamentos</h3>
                 <h4>Porções para uma pessoa</h4>
                 <div class="card shadow-lg p-2 rounded " style="width: 18rem;">
-                    <img src="farofa.jpg" class="card-img-top" alt="Farofa">
+                    <img src="images/farofa.jpg" class="card-img-top" alt="Farofa">
                     <div class="card-body">
                         <h4 class="card-title">Farofa</h4>
                         <h3 class="card-title text-success">R$ 10,00</h3>
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="salad.jpg" class="card-img-top" alt="Salada">
+                    <img src="images/salad.jpg" class="card-img-top" alt="Salada">
                     <div class="card-body">
                         <h4 class="card-title">Salada</h4>
                         <h3 class="card-title text-success">R$ 8,00</h3>
@@ -160,7 +160,7 @@
 
 
                 <div class="card shadow-lg p-2 rounded text-center" style="width: 18rem;">
-                    <img src="torresmo.jpg" class="card-img-top" alt="Torresmo">
+                    <img src="images/torresmo.jpg" class="card-img-top" alt="Torresmo">
                     <div class="card-body">
                         <h3 class="card-title">Torresmo</h4>
                             <h4 class="card-title text-success">R$ 8,00
