--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
     <div class="container mt-5 text-center">
-        <h2 class="mb-3">Menu - Faça A Sua Escolha</h2>
+        <h2 class="mb-3 display-5">Menu - Faça A Sua Escolha</h2>
         <div class="container mt-1 d-none d-lg-block">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
